# OpenBIS-Ontology

./: .gitignore  index-de.html  index-en.html  ontology.jsonld  ontology.nt  ontology.rdf  ontology.ttl  openbis.ttl  pyproject.toml
.github/workflows/: docu.yml  lintandtest.yml
openbis_json_parser/: README.md  __init__.py  cli.py  main.py  parser.py  test.py
openbis_json_parser/tests/: collection.json  collection.ttl  dataset.json  dataset.ttl  object.json  object.ttl  project.json  project.ttl  space.json  space.ttl  test_in.json  test_out.ttl  user.json  user.ttl
openbis_json_parser/tests/openbismantic/: collection.json  object.json  project.json
provenance/: provenance-de.html  provenance-de.ttl  provenance-en.html
webvowl/data/: ontology.json
